; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_layer.c_layer_state_set.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_layer.c_layer_state_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"layer_state: \00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c" to \00", align 1
@layer_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @layer_state_set(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @layer_state_set_kb(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = call i32 @dprint(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 (...) @layer_debug()
  %7 = call i32 @dprint(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* @layer_state, align 4
  %9 = call i32 (...) @layer_debug()
  %10 = call i32 (...) @dprintln()
  %11 = call i32 (...) @clear_keyboard_but_mods_and_keys()
  ret void
}

declare dso_local i32 @layer_state_set_kb(i32) #1

declare dso_local i32 @dprint(i8*) #1

declare dso_local i32 @layer_debug(...) #1

declare dso_local i32 @dprintln(...) #1

declare dso_local i32 @clear_keyboard_but_mods_and_keys(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
